Make sure excerpt__aside is perfectly aligned with the grid columns

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -30,7 +30,8 @@
   &__aside {
     @include breakpoint(map-get($breakpoints, sml)) {
       float: left;
-      margin-right: $rh-sml;
+      margin-right: $grid-gutter-width;
+      // max-width: 180px;
       + .card__main {
         overflow-x: hidden;
       }
